quienes somos y manejo de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -42,7 +42,7 @@
 
 <div class="container">
   <h2>Formulario de Contacto</h2>
-  <form>
+  <form action="enviar_email.php" method="post">
     <div class="form-group">
       <label for="nombre">Nombre:</label>
       <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
@@ -59,6 +59,8 @@
   </form>
 </div>
 <br><br><br>
+
+
 
 <footer class="footer bg-dark text-light">
   <div class="container">
