--- a/login.html
+++ b/login.html
@@ -44,20 +44,21 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <h2 class="text-center mb-4">Iniciar Sesión</h2>
-      <form>
+      <form action="login.php" method="post">
         <div class="form-group">
           <label for="username">Usuario:</label>
-          <input type="text" class="form-control" id="username" placeholder="Ingrese su nombre de usuario">
+          <input type="text" class="form-control" id="username" name="username" placeholder="Ingrese su nombre de usuario" required>
         </div>
         <div class="form-group">
           <label for="password">Contraseña:</label>
-          <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña">
+          <input type="password" class="form-control" id="password" name="password" placeholder="Ingrese su contraseña" required>
         </div>
         <button type="submit" class="btn btn-primary btn-block">Iniciar Sesión</button>
       </form>
     </div>
   </div>
 </div>
+
 <br><br><br><br><br><br><br><br><br>
 
 <footer class="footer bg-dark text-light">
