--- a/pagina.html
+++ b/pagina.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>pagina</title>
+  <title>Página</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+  <style type="text/css">
+    .carousel-inner img {
+      width: 100%;
+      height: 500px; /* Ajusta la altura según sea necesario */
+      /*object-fit: cover;*/
+      border-radius: 10px; /* Bordes redondeados */
+      border: 6px solid #ccc; /* Color del borde del carrusel */
+    }
+  </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg  bg-dark ">
-  <a class="navbar-brand" href="pagina.html"><img src="imagenes\logovet.png" alt="Logo" width="50" height="50"></a>
+<nav class="navbar navbar-expand-lg bg-dark">
+  <a class="navbar-brand" href="pagina.html"><img src="imagenes/logovet.png" alt="Logo" width="50" height="50"></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mx-auto" >
+    <ul class="navbar-nav mx-auto">
       <li class="nav-item">
         <a class="nav-link" href="quienes-somos.html">Quienes somos?</a>
       </li>
@@ -39,14 +51,26 @@
   </div>
 </nav>
 
-
-
-<div>
-	<img style="width: 100%;" src="imagenes\foto1.jpg">
+<div id="carouselExample" class="carousel slide" data-ride="carousel" > 
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="imagenes/foto1.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="imagenes/foto2.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="imagenes/foto3.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="imagenes/foto4.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="imagenes/foto5.jpg" alt="Second slide">
+    </div>
+    <!-- Agrega más elementos "carousel-item" según sea necesario -->
+  </div>
 </div>
-
-
-
 
 <footer class="footer bg-dark text-light">
   <div class="container">
@@ -74,5 +98,14 @@
     </div>
   </div>
 </footer>
+
+<script>
+  // Inicializa el carrusel
+  $(document).ready(function(){
+    $('#carouselExample').carousel();
+  });
+</script>
+
 </body>
 </html>
+
