--- a/registrar-cliente.html
+++ b/registrar-cliente.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Formulario de Contacto</title>
+  <title>Registrar Cliente</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -41,19 +41,31 @@
 <br>    
 
 <div class="container">
-  <h2>Formulario de Contacto</h2>
-  <form action="enviar_email.php" method="post">
+  <h2>Registrar Cliente</h2>
+  <form action="registrar-cliente.php" method="post">
     <div class="form-group">
       <label for="nombre">Nombre:</label>
-      <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese su nombre">
+      <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese nombre">
+    </div>
+    <div class="form-group">
+      <label for="apellido">Apellido:</label>
+      <input type="text" class="form-control" id="apellido" name="apellido" placeholder="Ingrese apellido">
     </div>
     <div class="form-group">
       <label for="email">Correo electrónico:</label>
-      <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su correo electrónico">
+      <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese correo electrónico">
     </div>
     <div class="form-group">
-      <label for="mensaje">Mensaje:</label>
-      <textarea class="form-control" id="mensaje" name="mensaje" rows="5" placeholder="Ingrese su mensaje"></textarea>
+      <label for="ciudad">Ciudad:</label>
+      <input type="ciudad" class="form-control" id="ciudad" name="ciudad" placeholder="Ingrese ciudad">
+    </div>
+    <div class="form-group">
+      <label for="direccion">Dirección:</label>
+      <input type="direccion" class="form-control" id="direccion" name="direccion" placeholder="Ingrese direccion">
+    </div>
+    <div class="form-group">
+      <label for="telefono">Telefono:</label>
+      <input type="telefono" class="form-control" id="telefono" name="telefono" placeholder="Ingrese telefono">
     </div>
     <button type="submit" class="btn btn-primary">Enviar</button>
   </form>
