--- a/mi-perfil.html
+++ b/mi-perfil.html
@@ -47,8 +47,10 @@
     <div class="row">
       <div class="col-md-3">
         <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action active">Registrar cliente</a>
-          <a href="#" class="list-group-item list-group-item-action">Registrar servicio</a>
+          <a href="registrar-cliente.html" class="list-group-item list-group-item-action active">Registrar Cliente</a>
+          <a href="registrar_mascota.html" class="list-group-item list-group-item-action">Registrar Mascota</a>
+          <a href="registrar_personal.html" class="list-group-item list-group-item-action">Registrar Personal</a>
+          <a href="baja_mascota.html" class="list-group-item list-group-item-action">Dar de baja una mascota</a>
           <a href="#" class="list-group-item list-group-item-action">Ver ficha clinica</a>
         </div>
       </div>
