--- a/consultar_carnet.html
+++ b/consultar_carnet.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>Mi Perfil</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Consulta de Mascotas</title>
+  <!-- Agrega los estilos de Bootstrap y el CSS personalizado -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <style>
+    .container {
+      margin-top: 50px;
+    }
+  </style>
 </head>
 <body>
 
@@ -38,30 +43,20 @@
     </ul>
   </div>
 </nav>
-<br><br><br>
+<br><br>
 
+<div class="container">
+  <h2>Consultar Carnet de Mascota</h2>
 
-  
-<!-- Contenido -->
-  <div class="container mt-4">
-    <div class="row">
-      <div class="col-md-3">
-        <div class="list-group">
-          <a href="registrar-cliente.html" class="list-group-item list-group-item-action active">Registrar Cliente</a>
-          <a href="registrar_mascota.html" class="list-group-item list-group-item-action">Registrar Mascota</a>
-          <a href="registrar_personal.html" class="list-group-item list-group-item-action">Registrar Personal</a>
-          <a href="baja_mascota.html" class="list-group-item list-group-item-action">Dar de baja una mascota</a>
-          <a href="consultar_carnet.html" class="list-group-item list-group-item-action">Ver ficha clinica</a>
-          <a href="completar_atencion.html" class="list-group-item list-group-item-action">Llenar Atención</a>
-        </div>
-      </div>
-      <div class="col-md-9">
-        <h2>Mi Perfil</h2>
-        <p>Desde aqui podes consultar fichas clinicas, registrar a un cliente y/o un servicio. </p>
-      </div>
+  <!-- Formulario para ingresar el nombre de la mascota -->
+  <form action="generar_carnet.php" method="post">
+    <div class="form-group">
+      <label for="nombre_mascota">Nombre de la Mascota:</label>
+      <input type="text" class="form-control" id="nombre_mascota" name="nombre_mascota" placeholder="Nombre de la mascota" required>
     </div>
+    <button type="submit" class="btn btn-primary">Generar Carnet</button>
+  </form>
 </div>
-<br><br><br>
 
 
 <footer class="footer bg-dark text-light">
@@ -90,5 +85,11 @@
     </div>
   </div>
 </footer>
+
+<!-- Agrega los scripts de Bootstrap y jQuery -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 </body>
 </html>
