--- a/modificar_personal.html
+++ b/modificar_personal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mi Perfil</title>
+  <title>Modificar Personal</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg  bg-dark ">
+<nav class="navbar navbar-expand-lg  bg-dark">
   <a class="navbar-brand" href="pagina.html"><img src="imagenes\logovet.png" alt="Logo" width="50" height="50"></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,32 +38,38 @@
     </ul>
   </div>
 </nav>
-<br><br><br>
+<br>
 
-
-  
-<!-- Contenido -->
-  <div class="container mt-4">
-    <div class="row">
-      <div class="col-md-3">
-        <div class="list-group">
-          <a href="registrar-cliente.html" class="list-group-item list-group-item-action active">Registrar Cliente</a>
-          <a href="registrar_mascota.html" class="list-group-item list-group-item-action">Registrar Mascota</a>
-          <a href="registrar_personal.html" class="list-group-item list-group-item-action">Registrar Personal</a>
-          <a href="baja_mascota.html" class="list-group-item list-group-item-action">Dar de baja una mascota</a>
-          <a href="consultar_carnet.html" class="list-group-item list-group-item-action">Ver ficha clinica</a>
-          <a href="completar_atencion.html" class="list-group-item list-group-item-action">Llenar Atención</a>
-          <a href="listar_personales.php" class="list-group-item list-group-item-action">Modificar Personal</a>
-        </div>
-      </div>
-      <div class="col-md-9">
-        <h2>Mi Perfil</h2>
-        <p>Desde aqui podes consultar fichas clinicas, registrar a un cliente y/o un servicio. </p>
-      </div>
+<div class="container">
+  <h2>Modificar Personal</h2>
+  <form action="modificar_personal.php" method="post">
+    <div class="form-group">
+      <label for="id">ID del Personal a Modificar:</label>
+      <input type="text" class="form-control" id="id" name="id" placeholder="Ingrese ID a modificar" required>
     </div>
-</div>
-<br><br><br>
-
+    <div class="form-group">
+      <label for="nombre">Nombre:</label>
+      <input type="nombre" class="form-control" id="nombre" name="nombre" placeholder="Ingrese nombre" required>
+    </div>
+    <div class="form-group">
+      <label for="apellido">Apellido:</label>
+      <input type="apellido" class="form-control" id="apellido" name="apellido" placeholder="Ingrese apellido" required>
+    </div>
+    <div class="form-group">
+      <label for="email">Correo electrónico:</label>
+      <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese correo electrónico" required>
+    </div>
+    <div class="form-group">
+      <label for="clave">Clave:</label>
+      <input type="password" class="form-control" id="clave" name="clave" placeholder="Ingrese nueva clave" required>
+    </div>
+    <div class="form-group">
+      <label for="rol_id">Nuevo Rol ID:</label>
+      <input type="text" class="form-control" id="rol_id" name="rol_id" placeholder="Ingrese nuevo Rol ID" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Modificar Personal</button>
+  </form>
+</div><br>
 
 <footer class="footer bg-dark text-light">
   <div class="container">
@@ -91,5 +97,6 @@
     </div>
   </div>
 </footer>
+
 </body>
 </html>
