agregar baja de personal

--- a/mi-perfil.html
+++ b/mi-perfil.html
@@ -53,7 +53,7 @@
           <a href="baja_mascota.html" class="list-group-item list-group-item-action">Dar de baja una mascota</a>
           <a href="consultar_carnet.html" class="list-group-item list-group-item-action">Ver ficha clinica</a>
           <a href="completar_atencion.html" class="list-group-item list-group-item-action">Llenar Atención</a>
-          <a href="listar_personales.php" class="list-group-item list-group-item-action">Modificar Personal</a>
+          <a href="listar_personales.php" class="list-group-item list-group-item-action">Modificar o dar de baja Personal</a>
         </div>
       </div>
       <div class="col-md-9">
