--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
     </ul>
   </div>
 </nav>
-<br><br><br><br><br><br><br>
+<br><br><br><br>
 
 <div class="container">
   <div class="row justify-content-center">
@@ -46,8 +46,8 @@
       <h2 class="text-center mb-4">Iniciar Sesión</h2>
       <form action="login.php" method="post">
         <div class="form-group">
-          <label for="username">Usuario:</label>
-          <input type="text" class="form-control" id="username" name="username" placeholder="Ingrese su nombre de usuario" required>
+          <label for="email">Correo electrónico:</label>
+          <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su correo electrónico" required>
         </div>
         <div class="form-group">
           <label for="password">Contraseña:</label>
@@ -59,7 +59,8 @@
   </div>
 </div>
 
-<br><br><br><br><br><br><br><br><br>
+
+<br><br><br><br>
 
 <footer class="footer bg-dark text-light">
     <div class="container">
