--- a/registrar_mascota.html
+++ b/registrar_mascota.html
@@ -45,11 +45,11 @@
   <form action="procesar_registro_mascota.php" method="post">
     <div class="form-group">
       <label for="cliente_id">Cliente ID:</label>
-      <input type="text" class="form-control" id="cliente_id" name="cliente_id" placeholder="Ingrese ID del cliente">
+      <input type="text" class="form-control" id="cliente_id" name="cliente_id" placeholder="Ingrese ID del cliente" required>
     </div>
     <div class="form-group">
       <label for="nombre">Nombre de la Mascota:</label>
-      <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese nombre de la mascota">
+      <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese nombre de la mascota" required>
     </div>
     <div class="form-group">
       <label for="foto">Foto:</label>
