agrego los perfiles que faltaban

--- a/mi-perfil-personal.html
+++ b/mi-perfil-personal.html
@@ -45,19 +45,14 @@
     <div class="row">
       <div class="col-md-3">
         <div class="list-group">
-          <a href="registrar-cliente.html" class="list-group-item list-group-item-action active">Registrar Cliente</a>
-          <a href="registrar_mascota.html" class="list-group-item list-group-item-action">Registrar Mascota</a>
-          <a href="registrar_personal.html" class="list-group-item list-group-item-action">Registrar Personal</a>
-          <a href="baja_mascota.html" class="list-group-item list-group-item-action">Dar de baja una mascota</a>
-          <a href="consultar_carnet.html" class="list-group-item list-group-item-action">Ver ficha clinica</a>
+          <a href="consultar_carnet.html" class="list-group-item list-group-item-action active">Ver ficha clinica</a>
           <a href="completar_atencion.html" class="list-group-item list-group-item-action">Llenar Atención</a>
-          <a href="listar_personales.php" class="list-group-item list-group-item-action">Modificar o dar de baja Personal</a>
         </div>
       </div>
       <div class="col-md-9">
         <h2>Mi Perfil</h2>
         <hr>
-        <h4>Perfil de Administrador</h4>
+        <h4>Perfil de Personal</h4>
         <p>Desde aqui podes consultar fichas clinicas, registrar a un cliente y/o un servicio. </p>
       </div>
     </div>
