--- a/mi-perfil.html
+++ b/mi-perfil.html
@@ -52,6 +52,7 @@
           <a href="consultar_carnet.html" class="list-group-item list-group-item-action">Ver ficha clinica</a>
           <a href="completar_atencion.html" class="list-group-item list-group-item-action">Llenar Atención</a>
           <a href="listar_personales.php" class="list-group-item list-group-item-action">Modificar o dar de baja Personal</a>
+          <a href="generar_turno.html" class="list-group-item list-group-item-action">Generar Turnos</a>
         </div>
       </div>
       <div class="col-md-9">
