--- a/consultar_carnet.html
+++ b/consultar_carnet.html
@@ -46,7 +46,7 @@
 <br><br>
 
 <div class="container">
-  <h2>Consultar Carnet de Mascota</h2>
+  <h2>Consultar Carnet de Mascota</h2><hr>
 
   <!-- Formulario para ingresar el nombre de la mascota -->
   <form action="generar_carnet.php" method="post">
@@ -58,7 +58,7 @@
   </form>
 </div>
 
-
+<br>
 <footer class="footer bg-dark text-light">
   <div class="container">
     <div class="row">
