--- a/mi-perfil.html
+++ b/mi-perfil.html
@@ -53,6 +53,7 @@
           <a href="listar_personales.php" class="list-group-item list-group-item-action">Modificar o dar de baja Personal</a>
           <a href="generar_turno.html" class="list-group-item list-group-item-action">Generar Turnos</a>
           <a href="buscar_cliente.html" class="list-group-item list-group-item-action">Listar Mascotas por Cliente</a>
+          <a href="listar_mascotas_estado.php" class="list-group-item list-group-item-action">Listar Mascotas</a>
         </div>
       </div>
       <div class="col-md-9">
