--- a/completar_atencion.html
+++ b/completar_atencion.html
@@ -38,13 +38,12 @@
     </ul>
   </div>
 </nav>
-<br><br>
+<br>
 
 
 <div class="container">
   <h2>Completar Atención</h2>
-
-  <!-- Formulario para completar una atención -->
+  <hr>
   <form action="procesar_atencion.php" method="post">
     <div class="form-group">
       <label for="nombre_mascota">Mascota:</label>
@@ -64,13 +63,13 @@
     </div>
     <div class="form-group">
       <label for="descripcion">Descripción:</label>
-      <textarea class="form-control" id="descripcion" name="descripcion" rows="4" placeholder="Ingrese la descripción" required></textarea>
+      <textarea class="form-control" id="descripcion" name="descripcion" rows="4" placeholder="Ingrese la descripción"></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Completar Atención</button>
   </form>
 </div>
 
-<br><br>
+<br>
 
 <footer class="footer bg-dark text-light">
   <div class="container">
