manejo de imagenes mas otras cosas

--- a/baja_mascota.html
+++ b/baja_mascota.html
@@ -1,3 +1,4 @@
+<!--ARCHIVO EN DESUSO---------------------------------------------->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -49,8 +50,8 @@
   <hr>
   <form action="procesar_baja_mascota.php" method="post">
     <div class="form-group">
-      <label for="nombre_mascota">Nombre de la Mascota:</label>
-      <input type="text" class="form-control" id="nombre_mascota" name="nombre_mascota" placeholder="Nombre de la mascota" required>
+      <label for="nombre_mascota">Ingrese la fecha de Fallecimiento de la mascota para darla de baja:</label>
+      <!--<input type="text" class="form-control" id="nombre_mascota" name="nombre_mascota" placeholder="Nombre de la mascota" required>-->
     </div>
     <div class="form-group">
       <label for="fecha_muerte">Fecha de Fallecimiento:</label>
