--- a/generar_turno.html
+++ b/generar_turno.html
@@ -50,11 +50,15 @@
         <form action="procesar_turno.php" method="post">
             <div class="form-group">
                 <label for="fecha_hora">Fecha y Hora:</label>
-                <input type="datetime-local" class="form-control" id="fecha_hora" name="fecha_hora" required min="<?php echo date('Y-m-d\TH:i', strtotime('09:00')); ?>" max="<?php echo date('Y-m-d\TH:i', strtotime('18:00')); ?>">
+                <input type="datetime-local" class="form-control" id="fecha_hora" name="fecha_hora" required>
             </div>
             <div class="form-group">
                 <label for="servicio_id">Servicio ID:</label>
                 <input type="text" class="form-control" id="servicio_id" name="servicio_id" required>
+            </div>
+            <div class="form-group">
+              <label for="personal_id">Personal ID:</label>
+              <input type="text" class="form-control" id="personal_id" name="personal_id" required>
             </div>
             <button type="submit" class="btn btn-primary btn-block">Generar Turno</button>
         </form>
