--- a/mi-perfil-personal.html
+++ b/mi-perfil-personal.html
@@ -45,8 +45,8 @@
     <div class="row">
       <div class="col-md-3">
         <div class="list-group">
-          <a href="consultar_carnet.html" class="list-group-item list-group-item-action active">Ver ficha clinica</a>
-          <a href="completar_atencion.html" class="list-group-item list-group-item-action">Llenar Atención</a>
+          <a href="completar_atencion.html" class="list-group-item list-group-item-action">Registrar Atencion</a>
+          <a href="consultar_carnet.html" class="list-group-item list-group-item-action">Consultar/Modificar Atenciones</a>
         </div>
       </div>
       <div class="col-md-9">
