--- a/mi-perfil.html
+++ b/mi-perfil.html
@@ -45,15 +45,14 @@
       <div class="col-md-3">
         <div class="list-group">
           <a href="registrar-cliente.html" class="list-group-item list-group-item-action active">Registrar Cliente</a>
-          <a href="registrar_mascota.html" class="list-group-item list-group-item-action">Registrar Mascota</a>
           <a href="registrar_personal.html" class="list-group-item list-group-item-action">Registrar Personal</a>
-          <a href="baja_mascota.html" class="list-group-item list-group-item-action">Dar de baja una mascota</a>
-          <a href="consultar_carnet.html" class="list-group-item list-group-item-action">Ver ficha clinica</a>
-          <a href="completar_atencion.html" class="list-group-item list-group-item-action">Llenar Atención</a>
-          <a href="listar_personales.php" class="list-group-item list-group-item-action">Modificar o dar de baja Personal</a>
+          <a href="listar_personales.php" class="list-group-item list-group-item-action">Consultar/Modificar/Eliminar Personal</a>
+          <a href="registrar_mascota.html" class="list-group-item list-group-item-action">Registrar Mascota</a>
+          <a href="listar_mascotas_estado.php" class="list-group-item list-group-item-action">Consultar/Modificar/Eliminar Mascotas</a>
+          <a href="completar_atencion.html" class="list-group-item list-group-item-action">Registrar Atencion</a>
+          <a href="consultar_carnet.html" class="list-group-item list-group-item-action">Consultar/Modificar Atenciones</a>
           <a href="generar_turno.html" class="list-group-item list-group-item-action">Generar Turnos</a>
-          <a href="buscar_cliente.html" class="list-group-item list-group-item-action">Listar Mascotas por Cliente</a>
-          <a href="listar_mascotas_estado.php" class="list-group-item list-group-item-action">Listar Mascotas</a>
+          <!--<a href="buscar_cliente.html" class="list-group-item list-group-item-action">Listar Mascotas por Cliente</a>-->
         </div>
       </div>
       <div class="col-md-9">
