--- a/completar_atencion.html
+++ b/completar_atencion.html
@@ -53,7 +53,17 @@
     </div>
     <div class="form-group">
       <label for="servicio_id">Servicio:</label>
-      <input type="text" class="form-control" id="servicio_id" name="servicio_id" placeholder="ID del servicio" required>
+      <select class="form-control" id="servicio_id" name="servicio_id" required>
+        <option value="1">Consulta General</option>
+        <option value="2">Vacunación</option>
+        <option value="3">Desparasitación</option>
+        <option value="4">Tratamientos</option>
+        <option value="5">Curaciones</option>
+        <option value="6">Baño</option>
+        <option value="7">Corte de Uñas</option>
+        <option value="8">Cirugía</option>
+        <option value="9">Otros</option>
+      </select>
     </div>
     <div class="form-group">
       <label for="fecha_hora">Fecha y Hora:</label>
