--- a/registrar_personal.html
+++ b/registrar_personal.html
@@ -62,8 +62,12 @@
       <input type="password" class="form-control" id="clave" name="clave" placeholder="Ingrese clave" required>
     </div>
     <div class="form-group">
-      <label for="rol_id">Rol ID:</label>
-      <input type="text" class="form-control" id="rol_id" name="rol_id" placeholder="Ingrese Rol ID" required>
+      <label for="rol_id">Rol:</label>
+      <select class="form-control" id="rol_id" name="rol_id" required>
+        <option value="1">Administrador</option>
+        <option value="2">Peluquero</option>
+        <option value="3">Veterinario</option>
+      </select>
     </div>
     <button type="submit" class="btn btn-primary">Registrar Personal</button>
   </form>
