Pongo botones para volver

--- a/consultar_carnet.html
+++ b/consultar_carnet.html
@@ -51,6 +51,7 @@
       <input type="text" class="form-control" id="nombre_mascota" name="nombre_mascota" placeholder="Nombre de la mascota" required>
     </div>
     <button type="submit" class="btn btn-primary">Generar Carnet</button>
+    <a href="gestionar-mi-perfil.php" class="btn btn-secondary">Volver</a>
   </form>
 </div>
 
