--- a/mi-perfil.html
+++ b/mi-perfil.html
@@ -61,7 +61,7 @@
         <h2>Mi Perfil</h2>
         <hr>
         <h4>Perfil de Administrador</h4>
-        <p>Desde aqui podes consultar fichas clinicas, registrar a un cliente y/o un servicio. </p>
+        <p>Desde aqui podes consultar fichas clinicas, registrar a un cliente y/o un servicio, etc. </p>
       </div>
     </div>
 </div>
