--- a/registrar_mascota.html
+++ b/registrar_mascota.html
@@ -40,7 +40,7 @@
     </ul>
   </div>
 </nav>
-<br> <br>   
+<br>  
 
 <div class="container">
   <h2>Registrar Mascota</h2>
@@ -71,10 +71,11 @@
       <input type="date" class="form-control" id="fecha_de_nac" name="fecha_de_nac">
     </div>
     <button type="submit" class="btn btn-primary">Registrar Mascota</button>
+    <a href="gestionar-mi-perfil.php" class="btn btn-secondary">Volver</a>
   </form>
 </div>
 
-<br><br><br>
+<br>
 
 <footer class="footer bg-dark text-light">
   <div class="container">
