--- a/completar_atencion.html
+++ b/completar_atencion.html
@@ -78,6 +78,7 @@
       <textarea class="form-control" id="descripcion" name="descripcion" rows="4" placeholder="Ingrese la descripción"></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Completar Atención</button>
+    <a href="gestionar-mi-perfil.php" class="btn btn-secondary">Volver</a>
   </form>
 </div>
 
