--- a/generar_turno.html
+++ b/generar_turno.html
@@ -46,21 +46,31 @@
         <h2 class="text-center">Generar Turno</h2>
         <hr>
 
-        <!-- Formulario para generar turno -->
         <form action="procesar_turno.php" method="post">
             <div class="form-group">
                 <label for="fecha_hora">Fecha y Hora:</label>
                 <input type="datetime-local" class="form-control" id="fecha_hora" name="fecha_hora" required>
             </div>
             <div class="form-group">
-                <label for="servicio_id">Servicio ID:</label>
-                <input type="text" class="form-control" id="servicio_id" name="servicio_id" required>
+              <label for="servicio_id">Servicio:</label>
+              <select class="form-control" id="servicio_id" name="servicio_id" required>
+                <option value="1">Consulta General</option>
+                <option value="2">Vacunación</option>
+                <option value="3">Desparasitación</option>
+                <option value="4">Tratamientos</option>
+                <option value="5">Curaciones</option>
+                <option value="6">Baño</option>
+                <option value="7">Corte de Uñas</option>
+                <option value="8">Cirugía</option>
+                <option value="9">Otros</option>
+              </select>
             </div>
             <div class="form-group">
               <label for="personal_id">Personal ID:</label>
               <input type="text" class="form-control" id="personal_id" name="personal_id" required>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Generar Turno</button>
+            <button type="submit" class="btn btn-primary">Generar Turno</button>
+            <a href="gestionar-mi-perfil.php" class="btn btn-secondary">Volver</a>
         </form>
     </div>
 </div>
