--- a/registrar_personal.html
+++ b/registrar_personal.html
@@ -70,10 +70,10 @@
       </select>
     </div>
     <button type="submit" class="btn btn-primary">Registrar Personal</button>
+    <a href="gestionar-mi-perfil.php" class="btn btn-secondary">Volver</a>
   </form>
-</div><br>
-
-
+</div>
+<br>
 
 <footer class="footer bg-dark text-light">
   <div class="container">
